compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_var_in_record_pattern.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 989
expression: "type X { X(a: Int, b: Int, c: Int) }\nfn x() {\n  case X(1,2,3) { X(x, y, x) -> 1 }\n}"

---
error: Duplicate variable in pattern
  ┌─ /src/one/two.gleam:3:27
  │
3 │   case X(1,2,3) { X(x, y, x) -> 1 }
  │                           ^ This has already been used

Variables can only be used once per pattern. This variable x appears
multiple times.
If you used the same variable twice deliberately in order to check for
equality please use a guard clause instead.
e.g. (x, y) if x == y -> ...

